tests/golden/err-window-import/expected_error.txt
error: 窓口 `_.clum` は import で指せません
 --> ./_.clum:1:2
  |
1 | @./_
  |  ^^^ 窓口はディレクトリを代弁するファイルであり、定義の置き場所ではありません
